@@ -24,4 +24,5 @@ Scott Williams @scott-joe
 Craig Davison @davisonio <craig@davison.io>
 Michael Heap @mheap <m@michaelheap.com>
 Matthew Du Pont @mattdp <monica@matthewfdupont.com>
+Kovah @kovah <contact@kovah.de>
 Alexis Saettler @asbiin <alexis@saettler.org>
